feat: update yaml docs
