# src/favorites/favorites.controller.ts
@@ -12,7 +12,10 @@ import {
 import { AlbumService } from '../albums/album.service';
 import { ArtistService } from '../artists/artist.service';
 import { TrackService } from '../tracks/track.service';
-import { FavoritesResponse } from './dto/favorites.response.dto';
+import {
+  FavoritesResponse,
+  ModifyFavoritesResponse,
+} from './dto/favorites.response.dto';
 import { FavoritesService } from './favorites.service';
 import {
   ALBUM_NOT_FOUND,
@@ -37,18 +40,18 @@ export class FavoritesController {
   @Post('track/:id')
   public async addTrackById(
     @Param('id', new ParseUUIDPipe()) id: string,
-  ): Promise<string> {
+  ): Promise<ModifyFavoritesResponse> {
     const track = await this.trackService.findById(id);
     if (!track) {
       throw new HttpException(TRACK_NOT_FOUND, HttpStatus.UNPROCESSABLE_ENTITY);
     }
 
-    return this.favoritesService.addTrackById(id);
+    return { message: await this.favoritesService.addTrackById(id) };
   }
 
   @Delete('track/:id')
   @HttpCode(204)
-  public async removeTrack(@Param('id', new ParseUUIDPipe()) id: string) {
+  public async removeTrackById(@Param('id', new ParseUUIDPipe()) id: string) {
     const isFav = (await this.favoritesService.findTracks()).includes(id);
     if (!isFav) {
       throw new HttpException(
@@ -61,20 +64,20 @@ export class FavoritesController {
   }
 
   @Post('album/:id')
-  public async addAlbum(
+  public async addAlbumById(
     @Param('id', new ParseUUIDPipe()) id: string,
-  ): Promise<string> {
+  ): Promise<ModifyFavoritesResponse> {
     const album = await this.albumService.findById(id);
     if (!album) {
       throw new HttpException(ALBUM_NOT_FOUND, HttpStatus.UNPROCESSABLE_ENTITY);
     }
 
-    return this.favoritesService.addAlbumById(id);
+    return { message: await this.favoritesService.addAlbumById(id) };
   }
 
   @Delete('album/:id')
   @HttpCode(204)
-  public async removeAlbum(@Param('id', new ParseUUIDPipe()) id: string) {
+  public async removeAlbumById(@Param('id', new ParseUUIDPipe()) id: string) {
     const isFav = (await this.favoritesService.findAlbums()).includes(id);
     if (!isFav) {
       throw new HttpException(
@@ -87,9 +90,9 @@ export class FavoritesController {
   }
 
   @Post('artist/:id')
-  public async addArtist(
+  public async addArtistById(
     @Param('id', new ParseUUIDPipe()) id: string,
-  ): Promise<string> {
+  ): Promise<ModifyFavoritesResponse> {
     const artist = await this.artistService.findById(id);
     if (!artist) {
       throw new HttpException(
@@ -98,12 +101,12 @@ export class FavoritesController {
       );
     }
 
-    return this.favoritesService.addArtistById(id);
+    return { message: await this.favoritesService.addArtistById(id) };
   }
 
   @Delete('artist/:id')
   @HttpCode(204)
-  public async removeArtist(@Param('id', new ParseUUIDPipe()) id: string) {
+  public async removeArtistById(@Param('id', new ParseUUIDPipe()) id: string) {
     const isFav = (await this.favoritesService.findArtists()).includes(id);
     if (!isFav) {
       throw new HttpException(
